--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -2,7 +2,8 @@
   "theme": "system",
   "translucency": false,
   "enabledCssSnippets": [
-    "obsidian"
+    "obsidian",
+    "nord"
   ],
   "baseFontSize": 19
 }
