--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,8 +7,12 @@
         "id": "231afb810f63d2d4",
         "type": "leaf",
         "state": {
-          "type": "empty",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "system/system-programming/the-linux-programming-interface/Ch3.md",
+            "mode": "source",
+            "source": true
+          }
         }
       }
     ],
@@ -66,6 +70,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "system/system-programming/the-linux-programming-interface/Ch3.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -85,9 +90,9 @@
   },
   "active": "231afb810f63d2d4",
   "lastOpenFiles": [
+    "system/system-programming/the-linux-programming-interface/Ch3.md",
     "system/system-programming/the-linux-programming-interface/Ch2.md",
     "system/system-programming/understanding-unix-linux-programming/Ch3.md",
-    "system/system-programming/the-linux-programming-interface/Ch3.md",
     "system/system-programming/the-linux-programming-interface/preface.md",
     "programming-language/Rust/blog/rust-blog/common-rust-lifetime-misconceptions.md",
     "utility/shell/Linux_shell脚本攻略CH1.md",
